// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debug — safe > renders healthy spots alongside failing ones 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug",
  ],
  [
    "console.group",
    "[Spot]",
  ],
  [
    "console.info",
    "DEV",
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.group",
    "[Spot]",
  ],
  [
    "console.info",
    undefined,
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;

exports[`debug — safe > runs the debug task even when a shape spot throws 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug",
  ],
  [
    "console.group",
    "[Spot]",
  ],
  [
    "console.info",
    undefined,
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;
